# Unity-Tree

./: .gitignore  0-setup_web_static.sh  3-deploy_web_static.py  README.md  deploy_static.sh  fabfile.py
backend/: README.md  app.py  backend_setup.sh  config.py  pyproject.toml  run.py  start-app.sh
backend/api/: __init__.py
backend/api/v1/views/: user.py
backend/app/: .env  __init__.py  app.db  config.py  db_engine.py
backend/app/api/: __init__.py  errors.py
backend/app/api/v1/: fam_upload.py  file_service.py  services.py  uploads.py
backend/app/api/v1/controllers/: family_member_controller.py  user_controller.py
backend/app/api/v1/views/: auth.py  family.py  family_member.py  media.py  user.py
backend/app/models/: __init__.py  base.py  education.py  family.py  family_member.py  media.py  mixins.py  profile.py  user.py
backend/migrations/versions/: 0fd5fb22aff7_.py  19cab846c82a_.py  368f476eb5a1_family_details.py  6443858ced45_family_city.py  79fe64e79801_renewed_migrations.py  7b9409dac931_.py  b51a4b661ca7_creator.py  e529a984d1fa_initial_migration.py  f1ec54ff1498_.py
backend/models/: education.py  family.py  media.py  user.py
frontend/: .env  .eslintrc.cjs  frontend_setup.sh  index.html  node_setup  package-lock.json  package.json  vite.config.js.timestamp-1715430619905-1bec65012a601.mjs
frontend/src/: App.vue  main.js  utils.js
frontend/src/_helpers/: adjustHeight.js  data.js  getCookie.js  index.js
frontend/src/assets/: main.css  new_tree.css  tree.css
unity/: README.md  package-lock.json  package.json
unity/src/: App.vue
(+61 files in other folders)
