[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for unity-tree application"
authors = ["Akachi Anabanti <akachi.anabanti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
migrate = "^0.3.8"
flask-migrate = "^4.0.7"
flask-cors = "^4.0.1"
flask-jwt-extended = "^4.6.0"
email-validator = "^2.1.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
